[package]
name = "fae"
version = "0.1.0"
edition = "2021"
# LALRPOP preprocessing
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb="2.5.0"
amqprs="1.3.0"
serde_json="1.0.96"
regex="1.8.1"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
anyhow = "1.0.71"
codespan-reporting = "0.11.1"

# Add a build-time dependency on the lalrpop library.
[build-dependencies]
lalrpop = "0.20.0"
